--- a/.env.dist
+++ b/.env.dist
@@ -1,4 +1,9 @@
+MYSQLDATABASE ='
+MYSQLHOST =
+MYSQLPASSWORD =
+MYSQLPORT =
+MYSQLUSER =
 SECRET_TOKEN =
 DB_PATH =
-PORT = 
-NODE_ENV = 
+PORT =
+NODE_ENV =
